ingresscontroller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: real-timechatapplication.com
    http:
      paths:
      - path: /usermanagement(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: usermanagement-service
            port:
              number: 80
      - path: /messagingservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: messagingservice-service
            port:
              number: 80
  defaultBackend:
    service:
      name: usermanagement-service
      port:
        number: 80
